trunk/Archive2/18/fc894222f81821/output
main.cpp: In function 'int main()':
main.cpp:4:19: error: 'printf' was not declared in this scope
     printf( "dsw" );
                   ^
